# llama.cpp-rockchip

./: .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md
.devops/nix/: package.nix
.github/workflows/: auto-sync-controller.yml  build-rockchip.yml  rebuild-on-push.yml
common/: arg.cpp  common.cpp  common.h  ngram-map.cpp  speculative.cpp
conversion/: __init__.py  gemma.py
docs/: quality-benchmarks.md  rocm-mi300x-test-results.md  turbo-speed-investigation.md
examples/: CMakeLists.txt
examples/eval-callback/: CMakeLists.txt  specprefill-probe.cpp
examples/repro-state/: CMakeLists.txt  repro-state.cpp
examples/specprefill/: CMakeLists.txt  specprefill.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-ork.h  ggml-vulkan.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-common.h  ggml-quants.c  ggml-quants.h  ggml-turbo-quant.c  ggml.c
ggml/src/ggml-ork/: CMakeLists.txt  ggml-ork.cpp
include/: llama.h
scripts/: sync_vendor.py  validate-workflows.sh
src/: llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache-iswa.cpp  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory.h  llama-model-loader.cpp  llama-model-saver.cpp  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-vocab.cpp  llama-vocab.h  turbo-rotation-data-32.h
tests/: CMakeLists.txt  test-backend-ops.cpp  test-llama-archs.cpp  test-ork-cache.cpp
(+67 files in other folders)
